// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField /> should render default status 1`] = `
<div
  className="input-wrapper"
>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-01 MuiFormControl-fullWidth-04"
  >
    <label
      className="MuiFormLabel-root-010 MuiInputLabel-root-05 MuiInputLabel-formControl-06 MuiInputLabel-animated-09"
      data-shrink={false}
      htmlFor={undefined}
    >
      Test label
    </label>
    <div
      className="MuiInput-root-017 MuiInput-fullWidth-024 MuiInput-formControl-018 MuiInput-underline-021"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-025"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={false}
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> should render error status 1`] = `
<div
  className="input-wrapper"
>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-01 MuiFormControl-fullWidth-04"
  >
    <label
      className="MuiFormLabel-root-010 MuiFormLabel-error-013 MuiInputLabel-root-05 MuiInputLabel-formControl-06 MuiInputLabel-animated-09"
      data-shrink={false}
      htmlFor={undefined}
    >
      Test label
    </label>
    <div
      className="MuiInput-root-017 MuiInput-error-022 MuiInput-fullWidth-024 MuiInput-formControl-018 MuiInput-underline-021"
    >
      <input
        aria-invalid={true}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-025"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={false}
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-030 MuiFormHelperText-error-031"
  />
</div>
`;
